mtd: lpddr_cmds: fix signed shifts in lpddr_cmds (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35386,6 +35386,7 @@
 	patches.suse/platform-chrome-cros_ec_ishtp-Fix-UAF-after-unbindin.patch
 	patches.suse/pwm-bcm2835-Make-sure-the-channel-is-enabled-after-p.patch
 	patches.suse/mtd-maps-pcmciamtd-fix-potential-memory-leak-in-pcmc.patch
+	patches.suse/mtd-lpddr_cmds-fix-signed-shifts-in-lpddr_cmds.patch
 	patches.suse/hwmon-sy7636a-Fix-regulator_enable-resource-leak-on-.patch
 	patches.suse/hwmon-w83l786ng-Convert-macros-to-functions-to-avoid.patch
 	patches.suse/hwmon-max16065-Use-local-variable-to-avoid-TOCTOU.patch
