--- a/series.conf
+++ b/series.conf
@@ -35413,6 +35413,7 @@
 	patches.suse/HID-logitech-dj-Remove-duplicate-error-logging.patch
 	patches.suse/HID-logitech-hidpp-Do-not-assume-FAP-in-hidpp_send_m.patch
 	patches.suse/Documentation-hid-alps-Fix-packet-format-section-hea.patch
+	patches.suse/power-supply-cw2015-Check-devm_delayed_work_autocanc.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
