spi: bcm63xx: drop wrong casts in probe() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35394,6 +35394,7 @@
 	patches.suse/regulator-core-disable-supply-if-enabling-main-regul.patch
 	patches.suse/regulator-core-Protect-regulator_supply_alias_list-w.patch
 	patches.suse/spi-tegra210-quad-Fix-timeout-handling.patch
+	patches.suse/spi-bcm63xx-drop-wrong-casts-in-probe.patch
 	patches.suse/hwmon-sy7636a-Fix-regulator_enable-resource-leak-on-.patch
 	patches.suse/hwmon-w83l786ng-Convert-macros-to-functions-to-avoid.patch
 	patches.suse/hwmon-max16065-Use-local-variable-to-avoid-TOCTOU.patch
