--- a/series.conf
+++ b/series.conf
@@ -35421,6 +35421,7 @@
 	patches.suse/PCI-PM-Reinstate-clearing-state_saved-in-legacy-and-.patch
 	patches.suse/PCI-dwc-Fix-wrong-PORT_LOGIC_LTSSM_STATE_MASK-defini.patch
 	patches.suse/PCI-keystone-Exit-ks_pcie_probe-for-invalid-mode.patch
+	patches.suse/PCI-rcar-gen2-Drop-ARM-dependency-from-PCI_RCAR_GEN2.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
