mtd: nand: relax ECC parameter validation check (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35388,6 +35388,7 @@
 	patches.suse/mtd-maps-pcmciamtd-fix-potential-memory-leak-in-pcmc.patch
 	patches.suse/mtd-lpddr_cmds-fix-signed-shifts-in-lpddr_cmds.patch
 	patches.suse/Revert-mtd-rawnand-marvell-fix-layouts.patch
+	patches.suse/mtd-nand-relax-ECC-parameter-validation-check.patch
 	patches.suse/hwmon-sy7636a-Fix-regulator_enable-resource-leak-on-.patch
 	patches.suse/hwmon-w83l786ng-Convert-macros-to-functions-to-avoid.patch
 	patches.suse/hwmon-max16065-Use-local-variable-to-avoid-TOCTOU.patch
