platform/x86: intel: chtwc_int33fe: don't dereference swnode args (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35398,6 +35398,7 @@
 	patches.suse/hwmon-sy7636a-Fix-regulator_enable-resource-leak-on-.patch
 	patches.suse/hwmon-w83l786ng-Convert-macros-to-functions-to-avoid.patch
 	patches.suse/hwmon-max16065-Use-local-variable-to-avoid-TOCTOU.patch
+	patches.suse/platform-x86-intel-chtwc_int33fe-don-t-dereference-s.patch
 	patches.suse/mfd-altera-sysmgr-Fix-device-leak-on-sysmgr-regmap-l.patch
 	patches.suse/mfd-da9055-Fix-missing-regmap_del_irq_chip-in-error-.patch
 	patches.suse/leds-leds-lp50xx-Allow-LED-0-to-be-added-to-module-b.patch
