PCI/PM: Reinstate clearing state_saved in legacy and !PM codepaths (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35418,6 +35418,7 @@
 	patches.suse/power-supply-rt9467-Prevent-using-uninitialized-loca.patch
 	patches.suse/power-supply-wm831x-Check-wm831x_set_bits-return-val.patch
 	patches.suse/power-supply-apm_power-only-unset-own-apm_get_power_.patch
+	patches.suse/PCI-PM-Reinstate-clearing-state_saved-in-legacy-and-.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
