power: supply: wm831x: Check wm831x_set_bits() return value (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35416,6 +35416,7 @@
 	patches.suse/power-supply-cw2015-Check-devm_delayed_work_autocanc.patch
 	patches.suse/power-supply-rt9467-Return-error-on-failure-in-rt946.patch
 	patches.suse/power-supply-rt9467-Prevent-using-uninitialized-loca.patch
+	patches.suse/power-supply-wm831x-Check-wm831x_set_bits-return-val.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
