--- a/series.conf
+++ b/series.conf
@@ -35390,6 +35390,7 @@
 	patches.suse/Revert-mtd-rawnand-marvell-fix-layouts.patch
 	patches.suse/mtd-nand-relax-ECC-parameter-validation-check.patch
 	patches.suse/mtd-rawnand-lpc32xx_slc-fix-GPIO-descriptor-leak-on-.patch
+	patches.suse/mtd-rawnand-renesas-Handle-devm_pm_runtime_enable-er.patch
 	patches.suse/hwmon-sy7636a-Fix-regulator_enable-resource-leak-on-.patch
 	patches.suse/hwmon-w83l786ng-Convert-macros-to-functions-to-avoid.patch
 	patches.suse/hwmon-max16065-Use-local-variable-to-avoid-TOCTOU.patch
