mfd: mt6358-irq: Fix missing irq_domain_remove() in error path (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35403,6 +35403,7 @@
 	patches.suse/mfd-da9055-Fix-missing-regmap_del_irq_chip-in-error-.patch
 	patches.suse/mfd-max77620-Fix-potential-IRQ-chip-conflict-when-pr.patch
 	patches.suse/mfd-mt6397-irq-Fix-missing-irq_domain_remove-in-erro.patch
+	patches.suse/mfd-mt6358-irq-Fix-missing-irq_domain_remove-in-erro.patch
 	patches.suse/leds-leds-lp50xx-Allow-LED-0-to-be-added-to-module-b.patch
 	patches.suse/leds-leds-lp50xx-LP5009-supports-3-modules-for-a-tot.patch
 	patches.suse/leds-leds-lp50xx-Enable-chip-before-any-communicatio.patch
