--- a/series.conf
+++ b/series.conf
@@ -35401,6 +35401,7 @@
 	patches.suse/platform-x86-intel-chtwc_int33fe-don-t-dereference-s.patch
 	patches.suse/mfd-altera-sysmgr-Fix-device-leak-on-sysmgr-regmap-l.patch
 	patches.suse/mfd-da9055-Fix-missing-regmap_del_irq_chip-in-error-.patch
+	patches.suse/mfd-max77620-Fix-potential-IRQ-chip-conflict-when-pr.patch
 	patches.suse/leds-leds-lp50xx-Allow-LED-0-to-be-added-to-module-b.patch
 	patches.suse/leds-leds-lp50xx-LP5009-supports-3-modules-for-a-tot.patch
 	patches.suse/leds-leds-lp50xx-Enable-chip-before-any-communicatio.patch
