--- a/series.conf
+++ b/series.conf
@@ -35384,6 +35384,7 @@
 	patches.suse/ASoC-stm32-sai-fix-OF-node-leak-on-probe.patch
 	patches.suse/ASoC-Intel-catpt-Fix-error-path-in-hw_params.patch
 	patches.suse/platform-chrome-cros_ec_ishtp-Fix-UAF-after-unbindin.patch
+	patches.suse/pwm-bcm2835-Make-sure-the-channel-is-enabled-after-p.patch
 	patches.suse/hwmon-sy7636a-Fix-regulator_enable-resource-leak-on-.patch
 	patches.suse/hwmon-w83l786ng-Convert-macros-to-functions-to-avoid.patch
 	patches.suse/hwmon-max16065-Use-local-variable-to-avoid-TOCTOU.patch
