drm/panthor: Handle errors returned by drm_sched_entity_init() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56793,6 +56793,7 @@
 	patches.suse/drm-atmel-hlcdc-fix-atmel_xlcdc_plane_setup_scaler.patch
 	patches.suse/accel-ivpu-Fix-race-condition-when-unbinding-BOs.patch
 	patches.suse/drm-imagination-Fix-reference-to-devm_platform_get_a.patch
+	patches.suse/drm-panthor-Handle-errors-returned-by-drm_sched_enti.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
