--- a/series.conf
+++ b/series.conf
@@ -56802,6 +56802,7 @@
 	patches.suse/drm-msm-a6xx-Fix-the-gemnoc-workaround.patch
 	patches.suse/drm-msm-a6xx-Improve-MX-rail-fallback-in-RPMH-vote-i.patch
 	patches.suse/drm-mediatek-Fix-probe-resource-leaks.patch
+	patches.suse/drm-mediatek-Fix-probe-memory-leak.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
