--- a/series.conf
+++ b/series.conf
@@ -56791,6 +56791,7 @@
 	patches.suse/drm-panel-visionox-rm69299-Don-t-clear-all-mode-flag.patch
 	patches.suse/accel-ivpu-Fix-DCT-active-percent-format.patch
 	patches.suse/drm-atmel-hlcdc-fix-atmel_xlcdc_plane_setup_scaler.patch
+	patches.suse/accel-ivpu-Fix-race-condition-when-unbinding-BOs.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
