--- a/series.conf
+++ b/series.conf
@@ -56788,6 +56788,7 @@
 	patches.suse/wifi-ieee80211-correct-FILS-status-codes.patch
 	patches.suse/wifi-nl80211-vendor-cmd-intel-fix-a-blank-kernel-doc.patch
 	patches.suse/media-verisilicon-Fix-CPU-stalls-on-G2-bus-error.patch
+	patches.suse/drm-panel-visionox-rm69299-Don-t-clear-all-mode-flag.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
