drm/panthor: Avoid adding of kernel BOs to extobj list (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56806,6 +56806,7 @@
 	patches.suse/drm-mediatek-Fix-probe-device-leaks.patch
 	patches.suse/drm-mediatek-ovl_adaptor-Fix-probe-device-leaks.patch
 	patches.suse/drm-xe-oa-Fix-potential-UAF-in-xe_oa_add_config_ioct.patch
+	patches.suse/drm-panthor-Avoid-adding-of-kernel-BOs-to-extobj-lis.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
