--- a/series.conf
+++ b/series.conf
@@ -56808,6 +56808,7 @@
 	patches.suse/drm-xe-oa-Fix-potential-UAF-in-xe_oa_add_config_ioct.patch
 	patches.suse/drm-panthor-Avoid-adding-of-kernel-BOs-to-extobj-lis.patch
 	patches.suse/Revert-drm-amd-Skip-power-ungate-during-suspend-for-.patch
+	patches.suse/ASoC-qcom-q6apm-dai-set-flags-to-reflect-correct-ope.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
