--- a/series.conf
+++ b/series.conf
@@ -56809,6 +56809,7 @@
 	patches.suse/drm-panthor-Avoid-adding-of-kernel-BOs-to-extobj-lis.patch
 	patches.suse/Revert-drm-amd-Skip-power-ungate-during-suspend-for-.patch
 	patches.suse/ASoC-qcom-q6apm-dai-set-flags-to-reflect-correct-ope.patch
+	patches.suse/ASoC-codecs-lpass-tx-macro-fix-SM6115-support.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
