drm/msm/a6xx: Fix the gemnoc workaround (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56799,6 +56799,7 @@
 	patches.suse/drm-panthor-Fix-UAF-on-kernel-BO-VA-nodes.patch
 	patches.suse/drm-panthor-Fix-potential-memleak-of-vma-structure.patch
 	patches.suse/drm-msm-dpu-drop-dpu_hw_dsc_destroy-prototype.patch
+	patches.suse/drm-msm-a6xx-Fix-the-gemnoc-workaround.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
