--- a/series.conf
+++ b/series.conf
@@ -56805,6 +56805,7 @@
 	patches.suse/drm-mediatek-Fix-probe-memory-leak.patch
 	patches.suse/drm-mediatek-Fix-probe-device-leaks.patch
 	patches.suse/drm-mediatek-ovl_adaptor-Fix-probe-device-leaks.patch
+	patches.suse/drm-xe-oa-Fix-potential-UAF-in-xe_oa_add_config_ioct.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
