drm/mediatek: Fix probe resource leaks (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56801,6 +56801,7 @@
 	patches.suse/drm-msm-dpu-drop-dpu_hw_dsc_destroy-prototype.patch
 	patches.suse/drm-msm-a6xx-Fix-the-gemnoc-workaround.patch
 	patches.suse/drm-msm-a6xx-Improve-MX-rail-fallback-in-RPMH-vote-i.patch
+	patches.suse/drm-mediatek-Fix-probe-resource-leaks.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
