efi: stmm: fix kernel-doc "bad line" warnings (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56810,6 +56810,7 @@
 	patches.suse/Revert-drm-amd-Skip-power-ungate-during-suspend-for-.patch
 	patches.suse/ASoC-qcom-q6apm-dai-set-flags-to-reflect-correct-ope.patch
 	patches.suse/ASoC-codecs-lpass-tx-macro-fix-SM6115-support.patch
+	patches.suse/efi-stmm-fix-kernel-doc-bad-line-warnings.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
