--- a/series.conf
+++ b/series.conf
@@ -56798,6 +56798,7 @@
 	patches.suse/drm-panthor-Fix-race-with-suspend-during-unplug.patch
 	patches.suse/drm-panthor-Fix-UAF-on-kernel-BO-VA-nodes.patch
 	patches.suse/drm-panthor-Fix-potential-memleak-of-vma-structure.patch
+	patches.suse/drm-msm-dpu-drop-dpu_hw_dsc_destroy-prototype.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
