drm: atmel-hlcdc: fix atmel_xlcdc_plane_setup_scaler() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56790,6 +56790,7 @@
 	patches.suse/media-verisilicon-Fix-CPU-stalls-on-G2-bus-error.patch
 	patches.suse/drm-panel-visionox-rm69299-Don-t-clear-all-mode-flag.patch
 	patches.suse/accel-ivpu-Fix-DCT-active-percent-format.patch
+	patches.suse/drm-atmel-hlcdc-fix-atmel_xlcdc_plane_setup_scaler.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
