drm/mediatek: Fix probe device leaks (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56803,6 +56803,7 @@
 	patches.suse/drm-msm-a6xx-Improve-MX-rail-fallback-in-RPMH-vote-i.patch
 	patches.suse/drm-mediatek-Fix-probe-resource-leaks.patch
 	patches.suse/drm-mediatek-Fix-probe-memory-leak.patch
+	patches.suse/drm-mediatek-Fix-probe-device-leaks.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
