--- a/series.conf
+++ b/series.conf
@@ -56796,6 +56796,7 @@
 	patches.suse/drm-panthor-Handle-errors-returned-by-drm_sched_enti.patch
 	patches.suse/drm-panthor-Fix-group_free_queue-for-partially-initi.patch
 	patches.suse/drm-panthor-Fix-race-with-suspend-during-unplug.patch
+	patches.suse/drm-panthor-Fix-UAF-on-kernel-BO-VA-nodes.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
