--- a/series.conf
+++ b/series.conf
@@ -56800,6 +56800,7 @@
 	patches.suse/drm-panthor-Fix-potential-memleak-of-vma-structure.patch
 	patches.suse/drm-msm-dpu-drop-dpu_hw_dsc_destroy-prototype.patch
 	patches.suse/drm-msm-a6xx-Fix-the-gemnoc-workaround.patch
+	patches.suse/drm-msm-a6xx-Improve-MX-rail-fallback-in-RPMH-vote-i.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
