accel/ivpu: Fix DCT active percent format (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56789,6 +56789,7 @@
 	patches.suse/wifi-nl80211-vendor-cmd-intel-fix-a-blank-kernel-doc.patch
 	patches.suse/media-verisilicon-Fix-CPU-stalls-on-G2-bus-error.patch
 	patches.suse/drm-panel-visionox-rm69299-Don-t-clear-all-mode-flag.patch
+	patches.suse/accel-ivpu-Fix-DCT-active-percent-format.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
