--- a/series.conf
+++ b/series.conf
@@ -56794,6 +56794,7 @@
 	patches.suse/accel-ivpu-Fix-race-condition-when-unbinding-BOs.patch
 	patches.suse/drm-imagination-Fix-reference-to-devm_platform_get_a.patch
 	patches.suse/drm-panthor-Handle-errors-returned-by-drm_sched_enti.patch
+	patches.suse/drm-panthor-Fix-group_free_queue-for-partially-initi.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
