--- a/series.conf
+++ b/series.conf
@@ -13698,6 +13698,7 @@
 	patches.suse/mtd-mtdpart-ignore-error-ENOENT-from-parsers-on-subp.patch
 	patches.suse/mtd-lpddr_cmds-fix-signed-shifts-in-lpddr_cmds.patch
 	patches.suse/Revert-mtd-rawnand-marvell-fix-layouts.patch
+	patches.suse/mtd-nand-relax-ECC-parameter-validation-check.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
