media: samsung: exynos4-is: fix potential ABBA deadlock on init (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13643,6 +13643,7 @@
 	patches.suse/media-amphion-Cancel-message-work-before-releasing-t.patch
 	patches.suse/media-mediatek-vcodec-Fix-a-reference-leak-in-mtk_vc.patch
 	patches.suse/media-renesas-rcar_drif-fix-device-node-reference-le.patch
+	patches.suse/media-samsung-exynos4-is-fix-potential-ABBA-deadlock.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
