--- a/series.conf
+++ b/series.conf
@@ -13634,6 +13634,7 @@
 	patches.suse/media-adv7842-Avoid-possible-out-of-bounds-array-acc.patch
 	patches.suse/media-msp3400-Avoid-possible-out-of-bounds-array-acc.patch
 	patches.suse/media-pvrusb2-Fix-incorrect-variable-used-in-trace-m.patch
+	patches.suse/media-vidtv-initialize-local-pointers-upon-transfer-.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
