media: pvrusb2: Fix incorrect variable used in trace message (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13633,6 +13633,7 @@
 	patches.suse/media-i2c-ADV7604-Remove-redundant-cancel_delayed_wo.patch
 	patches.suse/media-adv7842-Avoid-possible-out-of-bounds-array-acc.patch
 	patches.suse/media-msp3400-Avoid-possible-out-of-bounds-array-acc.patch
+	patches.suse/media-pvrusb2-Fix-incorrect-variable-used-in-trace-m.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
