drm/panthor: Handle errors returned by drm_sched_entity_init() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13656,6 +13656,7 @@
 	patches.suse/drm-atmel-hlcdc-fix-atmel_xlcdc_plane_setup_scaler.patch
 	patches.suse/accel-ivpu-Fix-race-condition-when-unbinding-BOs.patch
 	patches.suse/drm-imagination-Fix-reference-to-devm_platform_get_a.patch
+	patches.suse/drm-panthor-Handle-errors-returned-by-drm_sched_enti.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
