media: TDA1997x: Remove redundant cancel_delayed_work in probe (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13628,6 +13628,7 @@
 	patches.suse/wifi-nl80211-vendor-cmd-intel-fix-a-blank-kernel-doc.patch
 	patches.suse/net-phy-aquantia-check-for-NVMEM-deferral.patch
 	patches.suse/media-dvb-usb-dtv5100-fix-out-of-bounds-in-dtv5100_i.patch
+	patches.suse/media-TDA1997x-Remove-redundant-cancel_delayed_work-.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
