--- a/series.conf
+++ b/series.conf
@@ -13677,6 +13677,7 @@
 	patches.suse/drm-xe-oa-Fix-potential-UAF-in-xe_oa_add_config_ioct.patch
 	patches.suse/drm-nouveau-restrict-the-flush-page-to-a-32-bit-addr.patch
 	patches.suse/drm-panthor-Avoid-adding-of-kernel-BOs-to-extobj-lis.patch
+	patches.suse/drm-amd-display-Fix-logical-vs-bitwise-bug-in-get_em.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
