mtd: maps: pcmciamtd: fix potential memory leak in pcmciamtd_detach() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13694,6 +13694,7 @@
 	patches.suse/ASoC-Intel-catpt-Fix-error-path-in-hw_params.patch
 	patches.suse/platform-chrome-cros_ec_ishtp-Fix-UAF-after-unbindin.patch
 	patches.suse/pwm-bcm2835-Make-sure-the-channel-is-enabled-after-p.patch
+	patches.suse/mtd-maps-pcmciamtd-fix-potential-memory-leak-in-pcmc.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
