--- a/series.conf
+++ b/series.conf
@@ -13705,6 +13705,7 @@
 	patches.suse/regulator-core-Protect-regulator_supply_alias_list-w.patch
 	patches.suse/spi-tegra210-quad-Fix-timeout-handling.patch
 	patches.suse/spi-bcm63xx-drop-wrong-casts-in-probe.patch
+	patches.suse/spi-airoha-snfi-en7523-workaround-flash-damaging-if-.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
