ASoC: stm32: sai: fix device leak on probe (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13687,6 +13687,7 @@
 	patches.suse/ASoC-qcom-qdsp6-q6asm-dai-set-10-ms-period-and-buffe.patch
 	patches.suse/ASoC-qcom-q6asm-dai-perform-correct-state-check-befo.patch
 	patches.suse/ASoC-codecs-lpass-tx-macro-fix-SM6115-support.patch
+	patches.suse/ASoC-stm32-sai-fix-device-leak-on-probe.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
