--- a/series.conf
+++ b/series.conf
@@ -13645,6 +13645,7 @@
 	patches.suse/media-renesas-rcar_drif-fix-device-node-reference-le.patch
 	patches.suse/media-samsung-exynos4-is-fix-potential-ABBA-deadlock.patch
 	patches.suse/media-vpif_capture-fix-section-mismatch.patch
+	patches.suse/media-vpif_display-fix-section-mismatch.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
