media: cec: Fix debugfs leak on bus_register() failure (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13635,6 +13635,7 @@
 	patches.suse/media-msp3400-Avoid-possible-out-of-bounds-array-acc.patch
 	patches.suse/media-pvrusb2-Fix-incorrect-variable-used-in-trace-m.patch
 	patches.suse/media-vidtv-initialize-local-pointers-upon-transfer-.patch
+	patches.suse/media-cec-Fix-debugfs-leak-on-bus_register-failure.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
