--- a/series.conf
+++ b/series.conf
@@ -13724,6 +13724,7 @@
 	patches.suse/leds-leds-lp50xx-Enable-chip-before-any-communicatio.patch
 	patches.suse/leds-netxbig-Fix-GPIO-descriptor-leak-in-error-paths.patch
 	patches.suse/leds-rgb-leds-qcom-lpg-Don-t-enable-TRILED-when-conf.patch
+	patches.suse/backlight-led-bl-Add-devlink-to-supplier-LEDs.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
