mtd: lpddr_cmds: fix signed shifts in lpddr_cmds (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13696,6 +13696,7 @@
 	patches.suse/pwm-bcm2835-Make-sure-the-channel-is-enabled-after-p.patch
 	patches.suse/mtd-maps-pcmciamtd-fix-potential-memory-leak-in-pcmc.patch
 	patches.suse/mtd-mtdpart-ignore-error-ENOENT-from-parsers-on-subp.patch
+	patches.suse/mtd-lpddr_cmds-fix-signed-shifts-in-lpddr_cmds.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
