power: supply: rt9467: Return error on failure in rt9467_set_value_from_ranges() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13733,6 +13733,7 @@
 	patches.suse/power-supply-rt5033_charger-Fix-device-node-referenc.patch
 	patches.suse/power-supply-cw2015-Check-devm_delayed_work_autocanc.patch
 	patches.suse/power-supply-max17040-Check-iio_read_channel_process.patch
+	patches.suse/power-supply-rt9467-Return-error-on-failure-in-rt946.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
