--- a/series.conf
+++ b/series.conf
@@ -13657,6 +13657,7 @@
 	patches.suse/accel-ivpu-Fix-race-condition-when-unbinding-BOs.patch
 	patches.suse/drm-imagination-Fix-reference-to-devm_platform_get_a.patch
 	patches.suse/drm-panthor-Handle-errors-returned-by-drm_sched_enti.patch
+	patches.suse/drm-panthor-Fix-group_free_queue-for-partially-initi.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
