--- a/series.conf
+++ b/series.conf
@@ -13652,6 +13652,7 @@
 	patches.suse/drm-gma500-Remove-unused-helper-psb_fbdev_fb_setcolr.patch
 	patches.suse/drm-panel-visionox-rm69299-Don-t-clear-all-mode-flag.patch
 	patches.suse/accel-ivpu-Fix-DCT-active-percent-format.patch
+	patches.suse/drm-vgem-fence-Fix-potential-deadlock-on-release.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
