--- a/series.conf
+++ b/series.conf
@@ -13627,6 +13627,7 @@
 	patches.suse/wifi-ieee80211-correct-FILS-status-codes.patch
 	patches.suse/wifi-nl80211-vendor-cmd-intel-fix-a-blank-kernel-doc.patch
 	patches.suse/net-phy-aquantia-check-for-NVMEM-deferral.patch
+	patches.suse/media-dvb-usb-dtv5100-fix-out-of-bounds-in-dtv5100_i.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
