media: adv7842: Avoid possible out-of-bounds array accesses in adv7842_cp_log_status() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13631,6 +13631,7 @@
 	patches.suse/media-TDA1997x-Remove-redundant-cancel_delayed_work-.patch
 	patches.suse/media-i2c-adv7842-Remove-redundant-cancel_delayed_wo.patch
 	patches.suse/media-i2c-ADV7604-Remove-redundant-cancel_delayed_wo.patch
+	patches.suse/media-adv7842-Avoid-possible-out-of-bounds-array-acc.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
