--- a/series.conf
+++ b/series.conf
@@ -13685,6 +13685,7 @@
 	patches.suse/ASoC-qcom-q6apm-dai-set-flags-to-reflect-correct-ope.patch
 	patches.suse/ASoC-qcom-q6adm-the-the-copp-device-only-during-last.patch
 	patches.suse/ASoC-qcom-qdsp6-q6asm-dai-set-10-ms-period-and-buffe.patch
+	patches.suse/ASoC-qcom-q6asm-dai-perform-correct-state-check-befo.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
