media: verisilicon: Protect G2 HEVC decoder against invalid DPB index (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13639,6 +13639,7 @@
 	patches.suse/media-v4l2-mem2mem-Fix-outdated-documentation.patch
 	patches.suse/media-platform-mtk-mdp3-fix-device-leaks-at-probe.patch
 	patches.suse/media-verisilicon-Fix-CPU-stalls-on-G2-bus-error.patch
+	patches.suse/media-verisilicon-Protect-G2-HEVC-decoder-against-in.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
