--- a/series.conf
+++ b/series.conf
@@ -13693,6 +13693,7 @@
 	patches.suse/ASoC-codecs-wcd939x-fix-regmap-leak-on-probe-failure.patch
 	patches.suse/ASoC-Intel-catpt-Fix-error-path-in-hw_params.patch
 	patches.suse/platform-chrome-cros_ec_ishtp-Fix-UAF-after-unbindin.patch
+	patches.suse/pwm-bcm2835-Make-sure-the-channel-is-enabled-after-p.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
