--- a/series.conf
+++ b/series.conf
@@ -13655,6 +13655,7 @@
 	patches.suse/drm-vgem-fence-Fix-potential-deadlock-on-release.patch
 	patches.suse/drm-atmel-hlcdc-fix-atmel_xlcdc_plane_setup_scaler.patch
 	patches.suse/accel-ivpu-Fix-race-condition-when-unbinding-BOs.patch
+	patches.suse/drm-imagination-Fix-reference-to-devm_platform_get_a.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
