ASoC: qcom: q6apm-dai: set flags to reflect correct operation of appl_ptr (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13682,6 +13682,7 @@
 	patches.suse/ASoC-tas2781-correct-the-wrong-period.patch
 	patches.suse/ASoC-fsl_xcvr-clear-the-channel-status-control-memor.patch
 	patches.suse/ALSA-dice-fix-buffer-overflow-in-detect_stream_forma.patch
+	patches.suse/ASoC-qcom-q6apm-dai-set-flags-to-reflect-correct-ope.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
