--- a/series.conf
+++ b/series.conf
@@ -13649,6 +13649,7 @@
 	patches.suse/media-videobuf2-Fix-device-reference-leak-in-vb2_dc_.patch
 	patches.suse/media-rc-st_rc-Fix-reset-control-resource-leak.patch
 	patches.suse/gpu-host1x-Fix-race-in-syncpt-alloc-free.patch
+	patches.suse/drm-gma500-Remove-unused-helper-psb_fbdev_fb_setcolr.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
