hwmon: (w83l786ng) Convert macros to functions to avoid TOCTOU (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13709,6 +13709,7 @@
 	patches.suse/spi-ch341-fix-out-of-bounds-memory-access-in-ch341_t.patch
 	patches.suse/hwmon-sy7636a-Fix-regulator_enable-resource-leak-on-.patch
 	patches.suse/hwmon-max6697-fix-regmap-leak-on-probe-failure.patch
+	patches.suse/hwmon-w83l786ng-Convert-macros-to-functions-to-avoid.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
