spi: ch341: fix out-of-bounds memory access in ch341_transfer_one (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13706,6 +13706,7 @@
 	patches.suse/spi-tegra210-quad-Fix-timeout-handling.patch
 	patches.suse/spi-bcm63xx-drop-wrong-casts-in-probe.patch
 	patches.suse/spi-airoha-snfi-en7523-workaround-flash-damaging-if-.patch
+	patches.suse/spi-ch341-fix-out-of-bounds-memory-access-in-ch341_t.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
