gpu: host1x: Fix race in syncpt alloc/free (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13648,6 +13648,7 @@
 	patches.suse/media-vpif_display-fix-section-mismatch.patch
 	patches.suse/media-videobuf2-Fix-device-reference-leak-in-vb2_dc_.patch
 	patches.suse/media-rc-st_rc-Fix-reset-control-resource-leak.patch
+	patches.suse/gpu-host1x-Fix-race-in-syncpt-alloc-free.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
