--- a/series.conf
+++ b/series.conf
@@ -13646,6 +13646,7 @@
 	patches.suse/media-samsung-exynos4-is-fix-potential-ABBA-deadlock.patch
 	patches.suse/media-vpif_capture-fix-section-mismatch.patch
 	patches.suse/media-vpif_display-fix-section-mismatch.patch
+	patches.suse/media-videobuf2-Fix-device-reference-leak-in-vb2_dc_.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
