drm/msm/a2xx: stop over-complaining about the legacy firmware (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13664,6 +13664,7 @@
 	patches.suse/drm-panthor-Fix-potential-memleak-of-vma-structure.patch
 	patches.suse/drm-msm-dpu-Remove-dead-code-in-dpu_encoder_helper_r.patch
 	patches.suse/drm-msm-dpu-drop-dpu_hw_dsc_destroy-prototype.patch
+	patches.suse/drm-msm-a2xx-stop-over-complaining-about-the-legacy-.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
