media: verisilicon: Fix CPU stalls on G2 bus error (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13638,6 +13638,7 @@
 	patches.suse/media-cec-Fix-debugfs-leak-on-bus_register-failure.patch
 	patches.suse/media-v4l2-mem2mem-Fix-outdated-documentation.patch
 	patches.suse/media-platform-mtk-mdp3-fix-device-leaks-at-probe.patch
+	patches.suse/media-verisilicon-Fix-CPU-stalls-on-G2-bus-error.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
