spi: tegra210-quad: Fix timeout handling (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13703,6 +13703,7 @@
 	patches.suse/mtd-rawnand-renesas-Handle-devm_pm_runtime_enable-er.patch
 	patches.suse/regulator-core-disable-supply-if-enabling-main-regul.patch
 	patches.suse/regulator-core-Protect-regulator_supply_alias_list-w.patch
+	patches.suse/spi-tegra210-quad-Fix-timeout-handling.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
