PCI: rcar-gen2: Drop ARM dependency from PCI_RCAR_GEN2 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13741,6 +13741,7 @@
 	patches.suse/PCI-PM-Reinstate-clearing-state_saved-in-legacy-and-.patch
 	patches.suse/PCI-dwc-Fix-wrong-PORT_LOGIC_LTSSM_STATE_MASK-defini.patch
 	patches.suse/PCI-keystone-Exit-ks_pcie_probe-for-invalid-mode.patch
+	patches.suse/PCI-rcar-gen2-Drop-ARM-dependency-from-PCI_RCAR_GEN2.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
