mfd: altera-sysmgr: Fix device leak on sysmgr regmap lookup (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13712,6 +13712,7 @@
 	patches.suse/hwmon-w83l786ng-Convert-macros-to-functions-to-avoid.patch
 	patches.suse/hwmon-max16065-Use-local-variable-to-avoid-TOCTOU.patch
 	patches.suse/platform-x86-intel-chtwc_int33fe-don-t-dereference-s.patch
+	patches.suse/mfd-altera-sysmgr-Fix-device-leak-on-sysmgr-regmap-l.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
