--- a/series.conf
+++ b/series.conf
@@ -13738,6 +13738,7 @@
 	patches.suse/power-supply-wm831x-Check-wm831x_set_bits-return-val.patch
 	patches.suse/power-supply-apm_power-only-unset-own-apm_get_power_.patch
 	patches.suse/efi-stmm-fix-kernel-doc-bad-line-warnings.patch
+	patches.suse/PCI-PM-Reinstate-clearing-state_saved-in-legacy-and-.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
