spi: bcm63xx: drop wrong casts in probe() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13704,6 +13704,7 @@
 	patches.suse/regulator-core-disable-supply-if-enabling-main-regul.patch
 	patches.suse/regulator-core-Protect-regulator_supply_alias_list-w.patch
 	patches.suse/spi-tegra210-quad-Fix-timeout-handling.patch
+	patches.suse/spi-bcm63xx-drop-wrong-casts-in-probe.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
