--- a/series.conf
+++ b/series.conf
@@ -13671,6 +13671,7 @@
 	patches.suse/drm-msm-a6xx-Improve-MX-rail-fallback-in-RPMH-vote-i.patch
 	patches.suse/drm-mediatek-Fix-probe-resource-leaks.patch
 	patches.suse/drm-mediatek-Fix-probe-memory-leak.patch
+	patches.suse/drm-mediatek-Fix-probe-device-leaks.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
