--- a/series.conf
+++ b/series.conf
@@ -13630,6 +13630,7 @@
 	patches.suse/media-dvb-usb-dtv5100-fix-out-of-bounds-in-dtv5100_i.patch
 	patches.suse/media-TDA1997x-Remove-redundant-cancel_delayed_work-.patch
 	patches.suse/media-i2c-adv7842-Remove-redundant-cancel_delayed_wo.patch
+	patches.suse/media-i2c-ADV7604-Remove-redundant-cancel_delayed_wo.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
