ASoC: stm32: sai: fix OF node leak on probe (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13689,6 +13689,7 @@
 	patches.suse/ASoC-codecs-lpass-tx-macro-fix-SM6115-support.patch
 	patches.suse/ASoC-stm32-sai-fix-device-leak-on-probe.patch
 	patches.suse/ASoC-stm32-sai-fix-clk-prepare-imbalance-on-probe-fa.patch
+	patches.suse/ASoC-stm32-sai-fix-OF-node-leak-on-probe.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
