PCI: dwc: Fix wrong PORT_LOGIC_LTSSM_STATE_MASK definition (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13739,6 +13739,7 @@
 	patches.suse/power-supply-apm_power-only-unset-own-apm_get_power_.patch
 	patches.suse/efi-stmm-fix-kernel-doc-bad-line-warnings.patch
 	patches.suse/PCI-PM-Reinstate-clearing-state_saved-in-legacy-and-.patch
+	patches.suse/PCI-dwc-Fix-wrong-PORT_LOGIC_LTSSM_STATE_MASK-defini.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
