platform/chrome: cros_ec_ishtp: Fix UAF after unbinding driver (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13692,6 +13692,7 @@
 	patches.suse/ASoC-stm32-sai-fix-OF-node-leak-on-probe.patch
 	patches.suse/ASoC-codecs-wcd939x-fix-regmap-leak-on-probe-failure.patch
 	patches.suse/ASoC-Intel-catpt-Fix-error-path-in-hw_params.patch
+	patches.suse/platform-chrome-cros_ec_ishtp-Fix-UAF-after-unbindin.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
