--- a/series.conf
+++ b/series.conf
@@ -13673,6 +13673,7 @@
 	patches.suse/drm-mediatek-Fix-probe-memory-leak.patch
 	patches.suse/drm-mediatek-Fix-probe-device-leaks.patch
 	patches.suse/drm-mediatek-Fix-CCORR-mtk_ctm_s31_32_to_s1_n-functi.patch
+	patches.suse/drm-mediatek-Fix-device-node-reference-leak-in-mtk_d.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
