accel/ivpu: Fix race condition when unbinding BOs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13654,6 +13654,7 @@
 	patches.suse/accel-ivpu-Fix-DCT-active-percent-format.patch
 	patches.suse/drm-vgem-fence-Fix-potential-deadlock-on-release.patch
 	patches.suse/drm-atmel-hlcdc-fix-atmel_xlcdc_plane_setup_scaler.patch
+	patches.suse/accel-ivpu-Fix-race-condition-when-unbinding-BOs.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
