--- a/series.conf
+++ b/series.conf
@@ -13642,6 +13642,7 @@
 	patches.suse/media-verisilicon-Protect-G2-HEVC-decoder-against-in.patch
 	patches.suse/media-amphion-Cancel-message-work-before-releasing-t.patch
 	patches.suse/media-mediatek-vcodec-Fix-a-reference-leak-in-mtk_vc.patch
+	patches.suse/media-renesas-rcar_drif-fix-device-node-reference-le.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
