--- a/series.conf
+++ b/series.conf
@@ -13695,6 +13695,7 @@
 	patches.suse/platform-chrome-cros_ec_ishtp-Fix-UAF-after-unbindin.patch
 	patches.suse/pwm-bcm2835-Make-sure-the-channel-is-enabled-after-p.patch
 	patches.suse/mtd-maps-pcmciamtd-fix-potential-memory-leak-in-pcmc.patch
+	patches.suse/mtd-mtdpart-ignore-error-ENOENT-from-parsers-on-subp.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
