--- a/series.conf
+++ b/series.conf
@@ -13688,6 +13688,7 @@
 	patches.suse/ASoC-qcom-q6asm-dai-perform-correct-state-check-befo.patch
 	patches.suse/ASoC-codecs-lpass-tx-macro-fix-SM6115-support.patch
 	patches.suse/ASoC-stm32-sai-fix-device-leak-on-probe.patch
+	patches.suse/ASoC-stm32-sai-fix-clk-prepare-imbalance-on-probe-fa.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
