--- a/series.conf
+++ b/series.conf
@@ -13636,6 +13636,7 @@
 	patches.suse/media-pvrusb2-Fix-incorrect-variable-used-in-trace-m.patch
 	patches.suse/media-vidtv-initialize-local-pointers-upon-transfer-.patch
 	patches.suse/media-cec-Fix-debugfs-leak-on-bus_register-failure.patch
+	patches.suse/media-v4l2-mem2mem-Fix-outdated-documentation.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
