platform/x86: intel: chtwc_int33fe: don't dereference swnode args (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13711,6 +13711,7 @@
 	patches.suse/hwmon-max6697-fix-regmap-leak-on-probe-failure.patch
 	patches.suse/hwmon-w83l786ng-Convert-macros-to-functions-to-avoid.patch
 	patches.suse/hwmon-max16065-Use-local-variable-to-avoid-TOCTOU.patch
+	patches.suse/platform-x86-intel-chtwc_int33fe-don-t-dereference-s.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
