--- a/series.conf
+++ b/series.conf
@@ -13662,6 +13662,7 @@
 	patches.suse/drm-panthor-Fix-race-with-suspend-during-unplug.patch
 	patches.suse/drm-panthor-Fix-UAF-on-kernel-BO-VA-nodes.patch
 	patches.suse/drm-panthor-Fix-potential-memleak-of-vma-structure.patch
+	patches.suse/drm-msm-dpu-Remove-dead-code-in-dpu_encoder_helper_r.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
