--- a/series.conf
+++ b/series.conf
@@ -13660,6 +13660,7 @@
 	patches.suse/drm-panthor-Fix-group_free_queue-for-partially-initi.patch
 	patches.suse/drm-panthor-Fix-UAF-race-between-device-unplug-and-F.patch
 	patches.suse/drm-panthor-Fix-race-with-suspend-during-unplug.patch
+	patches.suse/drm-panthor-Fix-UAF-on-kernel-BO-VA-nodes.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
