--- a/series.conf
+++ b/series.conf
@@ -13730,6 +13730,7 @@
 	patches.suse/HID-logitech-dj-Add-support-for-a-new-lightspeed-rec.patch
 	patches.suse/HID-logitech-hidpp-Do-not-assume-FAP-in-hidpp_send_m.patch
 	patches.suse/Documentation-hid-alps-Fix-packet-format-section-hea.patch
+	patches.suse/power-supply-rt5033_charger-Fix-device-node-referenc.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
