--- a/series.conf
+++ b/series.conf
@@ -13650,6 +13650,7 @@
 	patches.suse/media-rc-st_rc-Fix-reset-control-resource-leak.patch
 	patches.suse/gpu-host1x-Fix-race-in-syncpt-alloc-free.patch
 	patches.suse/drm-gma500-Remove-unused-helper-psb_fbdev_fb_setcolr.patch
+	patches.suse/drm-panel-visionox-rm69299-Don-t-clear-all-mode-flag.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
