--- a/series.conf
+++ b/series.conf
@@ -13697,6 +13697,7 @@
 	patches.suse/mtd-maps-pcmciamtd-fix-potential-memory-leak-in-pcmc.patch
 	patches.suse/mtd-mtdpart-ignore-error-ENOENT-from-parsers-on-subp.patch
 	patches.suse/mtd-lpddr_cmds-fix-signed-shifts-in-lpddr_cmds.patch
+	patches.suse/Revert-mtd-rawnand-marvell-fix-layouts.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
