--- a/series.conf
+++ b/series.conf
@@ -13708,6 +13708,7 @@
 	patches.suse/spi-airoha-snfi-en7523-workaround-flash-damaging-if-.patch
 	patches.suse/spi-ch341-fix-out-of-bounds-memory-access-in-ch341_t.patch
 	patches.suse/hwmon-sy7636a-Fix-regulator_enable-resource-leak-on-.patch
+	patches.suse/hwmon-max6697-fix-regmap-leak-on-probe-failure.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
