ASoC: codecs: wcd939x: fix regmap leak on probe failure (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13690,6 +13690,7 @@
 	patches.suse/ASoC-stm32-sai-fix-device-leak-on-probe.patch
 	patches.suse/ASoC-stm32-sai-fix-clk-prepare-imbalance-on-probe-fa.patch
 	patches.suse/ASoC-stm32-sai-fix-OF-node-leak-on-probe.patch
+	patches.suse/ASoC-codecs-wcd939x-fix-regmap-leak-on-probe-failure.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
