drm/msm/a6xx: Improve MX rail fallback in RPMH vote init (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13668,6 +13668,7 @@
 	patches.suse/drm-msm-a6xx-Fix-out-of-bound-IO-access-in-a6xx_get_.patch
 	patches.suse/drm-msm-a6xx-Flush-LRZ-cache-before-PT-switch.patch
 	patches.suse/drm-msm-a6xx-Fix-the-gemnoc-workaround.patch
+	patches.suse/drm-msm-a6xx-Improve-MX-rail-fallback-in-RPMH-vote-i.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
