--- a/series.conf
+++ b/series.conf
@@ -13728,6 +13728,7 @@
 	patches.suse/backlight-lp855x-Fix-lp855x.h-kernel-doc-warnings.patch
 	patches.suse/HID-logitech-dj-Remove-duplicate-error-logging.patch
 	patches.suse/HID-logitech-dj-Add-support-for-a-new-lightspeed-rec.patch
+	patches.suse/HID-logitech-hidpp-Do-not-assume-FAP-in-hidpp_send_m.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
