drm/mediatek: Fix probe memory leak (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13670,6 +13670,7 @@
 	patches.suse/drm-msm-a6xx-Fix-the-gemnoc-workaround.patch
 	patches.suse/drm-msm-a6xx-Improve-MX-rail-fallback-in-RPMH-vote-i.patch
 	patches.suse/drm-mediatek-Fix-probe-resource-leaks.patch
+	patches.suse/drm-mediatek-Fix-probe-memory-leak.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
