--- a/series.conf
+++ b/series.conf
@@ -13678,6 +13678,7 @@
 	patches.suse/drm-nouveau-restrict-the-flush-page-to-a-32-bit-addr.patch
 	patches.suse/drm-panthor-Avoid-adding-of-kernel-BOs-to-extobj-lis.patch
 	patches.suse/drm-amd-display-Fix-logical-vs-bitwise-bug-in-get_em.patch
+	patches.suse/drm-amdgpu-add-missing-lock-to-amdgpu_ttm_access_mem.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
