leds: Drop duplicate LEDS_EXPRESSWIRE config (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13720,6 +13720,7 @@
 	patches.suse/leds-leds-lp50xx-Allow-LED-0-to-be-added-to-module-b.patch
 	patches.suse/leds-leds-lp50xx-LP5009-supports-3-modules-for-a-tot.patch
 	patches.suse/leds-leds-cros_ec-Skip-LEDs-without-color-components.patch
+	patches.suse/leds-Drop-duplicate-LEDS_EXPRESSWIRE-config.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
