PCI: keystone: Exit ks_pcie_probe() for invalid mode (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13740,6 +13740,7 @@
 	patches.suse/efi-stmm-fix-kernel-doc-bad-line-warnings.patch
 	patches.suse/PCI-PM-Reinstate-clearing-state_saved-in-legacy-and-.patch
 	patches.suse/PCI-dwc-Fix-wrong-PORT_LOGIC_LTSSM_STATE_MASK-defini.patch
+	patches.suse/PCI-keystone-Exit-ks_pcie_probe-for-invalid-mode.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
