ASoC: qcom: q6adm: the the copp device only during last instance (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13683,6 +13683,7 @@
 	patches.suse/ASoC-fsl_xcvr-clear-the-channel-status-control-memor.patch
 	patches.suse/ALSA-dice-fix-buffer-overflow-in-detect_stream_forma.patch
 	patches.suse/ASoC-qcom-q6apm-dai-set-flags-to-reflect-correct-ope.patch
+	patches.suse/ASoC-qcom-q6adm-the-the-copp-device-only-during-last.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
