--- a/series.conf
+++ b/series.conf
@@ -13715,6 +13715,7 @@
 	patches.suse/mfd-altera-sysmgr-Fix-device-leak-on-sysmgr-regmap-l.patch
 	patches.suse/mfd-da9055-Fix-missing-regmap_del_irq_chip-in-error-.patch
 	patches.suse/mfd-max77620-Fix-potential-IRQ-chip-conflict-when-pr.patch
+	patches.suse/mfd-mt6397-irq-Fix-missing-irq_domain_remove-in-erro.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
