leds: netxbig: Fix GPIO descriptor leak in error paths (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13722,6 +13722,7 @@
 	patches.suse/leds-leds-cros_ec-Skip-LEDs-without-color-components.patch
 	patches.suse/leds-Drop-duplicate-LEDS_EXPRESSWIRE-config.patch
 	patches.suse/leds-leds-lp50xx-Enable-chip-before-any-communicatio.patch
+	patches.suse/leds-netxbig-Fix-GPIO-descriptor-leak-in-error-paths.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
