power: supply: wm831x: Check wm831x_set_bits() return value (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13735,6 +13735,7 @@
 	patches.suse/power-supply-max17040-Check-iio_read_channel_process.patch
 	patches.suse/power-supply-rt9467-Return-error-on-failure-in-rt946.patch
 	patches.suse/power-supply-rt9467-Prevent-using-uninitialized-loca.patch
+	patches.suse/power-supply-wm831x-Check-wm831x_set_bits-return-val.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
