--- a/series.conf
+++ b/series.conf
@@ -13666,6 +13666,7 @@
 	patches.suse/drm-msm-dpu-drop-dpu_hw_dsc_destroy-prototype.patch
 	patches.suse/drm-msm-a2xx-stop-over-complaining-about-the-legacy-.patch
 	patches.suse/drm-msm-a6xx-Fix-out-of-bound-IO-access-in-a6xx_get_.patch
+	patches.suse/drm-msm-a6xx-Flush-LRZ-cache-before-PT-switch.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
