--- a/series.conf
+++ b/series.conf
@@ -13710,6 +13710,7 @@
 	patches.suse/hwmon-sy7636a-Fix-regulator_enable-resource-leak-on-.patch
 	patches.suse/hwmon-max6697-fix-regmap-leak-on-probe-failure.patch
 	patches.suse/hwmon-w83l786ng-Convert-macros-to-functions-to-avoid.patch
+	patches.suse/hwmon-max16065-Use-local-variable-to-avoid-TOCTOU.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
