leds: leds-cros_ec: Skip LEDs without color components (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13719,6 +13719,7 @@
 	patches.suse/mfd-mt6358-irq-Fix-missing-irq_domain_remove-in-erro.patch
 	patches.suse/leds-leds-lp50xx-Allow-LED-0-to-be-added-to-module-b.patch
 	patches.suse/leds-leds-lp50xx-LP5009-supports-3-modules-for-a-tot.patch
+	patches.suse/leds-leds-cros_ec-Skip-LEDs-without-color-components.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
