--- a/series.conf
+++ b/series.conf
@@ -13723,6 +13723,7 @@
 	patches.suse/leds-Drop-duplicate-LEDS_EXPRESSWIRE-config.patch
 	patches.suse/leds-leds-lp50xx-Enable-chip-before-any-communicatio.patch
 	patches.suse/leds-netxbig-Fix-GPIO-descriptor-leak-in-error-paths.patch
+	patches.suse/leds-rgb-leds-qcom-lpg-Don-t-enable-TRILED-when-conf.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
