--- a/series.conf
+++ b/series.conf
@@ -13659,6 +13659,7 @@
 	patches.suse/drm-panthor-Handle-errors-returned-by-drm_sched_enti.patch
 	patches.suse/drm-panthor-Fix-group_free_queue-for-partially-initi.patch
 	patches.suse/drm-panthor-Fix-UAF-race-between-device-unplug-and-F.patch
+	patches.suse/drm-panthor-Fix-race-with-suspend-during-unplug.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
