--- a/series.conf
+++ b/series.conf
@@ -13717,6 +13717,7 @@
 	patches.suse/mfd-max77620-Fix-potential-IRQ-chip-conflict-when-pr.patch
 	patches.suse/mfd-mt6397-irq-Fix-missing-irq_domain_remove-in-erro.patch
 	patches.suse/mfd-mt6358-irq-Fix-missing-irq_domain_remove-in-erro.patch
+	patches.suse/leds-leds-lp50xx-Allow-LED-0-to-be-added-to-module-b.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
