--- a/series.conf
+++ b/series.conf
@@ -13713,6 +13713,7 @@
 	patches.suse/hwmon-max16065-Use-local-variable-to-avoid-TOCTOU.patch
 	patches.suse/platform-x86-intel-chtwc_int33fe-don-t-dereference-s.patch
 	patches.suse/mfd-altera-sysmgr-Fix-device-leak-on-sysmgr-regmap-l.patch
+	patches.suse/mfd-da9055-Fix-missing-regmap_del_irq_chip-in-error-.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
