--- a/series.conf
+++ b/series.conf
@@ -13721,6 +13721,7 @@
 	patches.suse/leds-leds-lp50xx-LP5009-supports-3-modules-for-a-tot.patch
 	patches.suse/leds-leds-cros_ec-Skip-LEDs-without-color-components.patch
 	patches.suse/leds-Drop-duplicate-LEDS_EXPRESSWIRE-config.patch
+	patches.suse/leds-leds-lp50xx-Enable-chip-before-any-communicatio.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
