drm/mediatek: Fix probe resource leaks (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13669,6 +13669,7 @@
 	patches.suse/drm-msm-a6xx-Flush-LRZ-cache-before-PT-switch.patch
 	patches.suse/drm-msm-a6xx-Fix-the-gemnoc-workaround.patch
 	patches.suse/drm-msm-a6xx-Improve-MX-rail-fallback-in-RPMH-vote-i.patch
+	patches.suse/drm-mediatek-Fix-probe-resource-leaks.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
