HID: logitech-dj: Add support for a new lightspeed receiver iteration (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13727,6 +13727,7 @@
 	patches.suse/backlight-led-bl-Add-devlink-to-supplier-LEDs.patch
 	patches.suse/backlight-lp855x-Fix-lp855x.h-kernel-doc-warnings.patch
 	patches.suse/HID-logitech-dj-Remove-duplicate-error-logging.patch
+	patches.suse/HID-logitech-dj-Add-support-for-a-new-lightspeed-rec.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
