drm/panthor: Fix UAF race between device unplug and FW event processing (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13658,6 +13658,7 @@
 	patches.suse/drm-imagination-Fix-reference-to-devm_platform_get_a.patch
 	patches.suse/drm-panthor-Handle-errors-returned-by-drm_sched_enti.patch
 	patches.suse/drm-panthor-Fix-group_free_queue-for-partially-initi.patch
+	patches.suse/drm-panthor-Fix-UAF-race-between-device-unplug-and-F.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
