drm/msm/a6xx: Fix out of bound IO access in a6xx_get_gmu_registers (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13665,6 +13665,7 @@
 	patches.suse/drm-msm-dpu-Remove-dead-code-in-dpu_encoder_helper_r.patch
 	patches.suse/drm-msm-dpu-drop-dpu_hw_dsc_destroy-prototype.patch
 	patches.suse/drm-msm-a2xx-stop-over-complaining-about-the-legacy-.patch
+	patches.suse/drm-msm-a6xx-Fix-out-of-bound-IO-access-in-a6xx_get_.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
