--- a/series.conf
+++ b/series.conf
@@ -13700,6 +13700,7 @@
 	patches.suse/Revert-mtd-rawnand-marvell-fix-layouts.patch
 	patches.suse/mtd-nand-relax-ECC-parameter-validation-check.patch
 	patches.suse/mtd-rawnand-lpc32xx_slc-fix-GPIO-descriptor-leak-on-.patch
+	patches.suse/mtd-rawnand-renesas-Handle-devm_pm_runtime_enable-er.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
