accel/ivpu: Fix DCT active percent format (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13651,6 +13651,7 @@
 	patches.suse/gpu-host1x-Fix-race-in-syncpt-alloc-free.patch
 	patches.suse/drm-gma500-Remove-unused-helper-psb_fbdev_fb_setcolr.patch
 	patches.suse/drm-panel-visionox-rm69299-Don-t-clear-all-mode-flag.patch
+	patches.suse/accel-ivpu-Fix-DCT-active-percent-format.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
