media: mediatek: vcodec: Fix a reference leak in mtk_vcodec_fw_vpu_init() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13641,6 +13641,7 @@
 	patches.suse/media-verisilicon-Fix-CPU-stalls-on-G2-bus-error.patch
 	patches.suse/media-verisilicon-Protect-G2-HEVC-decoder-against-in.patch
 	patches.suse/media-amphion-Cancel-message-work-before-releasing-t.patch
+	patches.suse/media-mediatek-vcodec-Fix-a-reference-leak-in-mtk_vc.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
