--- a/series.conf
+++ b/series.conf
@@ -13653,6 +13653,7 @@
 	patches.suse/drm-panel-visionox-rm69299-Don-t-clear-all-mode-flag.patch
 	patches.suse/accel-ivpu-Fix-DCT-active-percent-format.patch
 	patches.suse/drm-vgem-fence-Fix-potential-deadlock-on-release.patch
+	patches.suse/drm-atmel-hlcdc-fix-atmel_xlcdc_plane_setup_scaler.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
