--- a/series.conf
+++ b/series.conf
@@ -13679,6 +13679,7 @@
 	patches.suse/drm-panthor-Avoid-adding-of-kernel-BOs-to-extobj-lis.patch
 	patches.suse/drm-amd-display-Fix-logical-vs-bitwise-bug-in-get_em.patch
 	patches.suse/drm-amdgpu-add-missing-lock-to-amdgpu_ttm_access_mem.patch
+	patches.suse/Revert-drm-amd-Skip-power-ungate-during-suspend-for-.patch
 	patches.suse/ASoC-tas2781-correct-the-wrong-period.patch
 	patches.suse/ASoC-fsl_xcvr-clear-the-channel-status-control-memor.patch
 	patches.suse/ALSA-dice-fix-buffer-overflow-in-detect_stream_forma.patch
