r8169: align WAKE_PHY handling with r8125/r8126 vendor drivers (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -966,6 +966,7 @@
 	patches.suse/msft-hv-3081-hv_sock-Initializing-vsk-trans-to-NULL-to-prevent-a-.patch
 	patches.suse/r8169-improve-__rtl8169_set_wol.patch
 	patches.suse/r8169-improve-rtl_set_d3_pll_down.patch
+	patches.suse/r8169-align-WAKE_PHY-handling-with-r8125-r8126-vendo.patch
 	patches.suse/neighbour-Add-hlist_node-to-struct-neighbour.patch
 	patches.suse/neighbour-Define-neigh_for_each_in_bucket.patch
 	patches.suse/neighbour-Convert-seq_file-functions-to-use-hlist.patch
