r8169: remove original workaround for RTL8125 broken rx issue (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -809,6 +809,7 @@
 	patches.suse/iavf-Add-net_shaper_ops-support.patch
 	patches.suse/iavf-add-support-to-exchange-qos-capabilities.patch
 	patches.suse/r8169-don-t-apply-UDP-padding-quirk-on-RTL8126A.patch
+	patches.suse/r8169-remove-original-workaround-for-RTL8125-broken-.patch
 	patches.suse/tg3-Link-IRQs-to-NAPI-instances.patch
 	patches.suse/tg3-Link-queues-to-NAPIs.patch
 	patches.suse/netdevsim-copy-addresses-for-both-in-and-out-paths.patch
