r8169: remove rtl_dash_loop_wait_high/low (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -853,6 +853,7 @@
 	patches.suse/r8169-don-t-take-RTNL-lock-in-rtl_task.patch
 	patches.suse/r8169-replace-custom-flag-with-disable_work-et-al.patch
 	patches.suse/r8169-avoid-duplicated-messages-if-loading-firmware-.patch
+	patches.suse/r8169-remove-rtl_dash_loop_wait_high-low.patch
 	patches.suse/net-phy-realtek-add-RTL8125D-internal-PHY.patch
 	patches.suse/eth-Fix-typo-accelaration-.-exprienced-and-rewrittin.patch
 	patches.suse/net-mlx5-Refactor-QoS-group-scheduling-element-creat.patch
