r8169: implement additional ethtool stats ops (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -831,6 +831,7 @@
 	patches.suse/selftests-bpf-check-program-redirect-in-xdp_cpumap_a.patch
 	patches.suse/xsk-Get-rid-of-xdp_buff_xsk-xskb_list_node.patch
 	patches.suse/xsk-s-free_list_node-list_node.patch
+	patches.suse/r8169-implement-additional-ethtool-stats-ops.patch
 	patches.suse/neighbour-Remove-NEIGH_DN_TABLE.patch
 	patches.suse/net-sched-cbs-Fix-integer-overflow-in-cbs_set_port_r.patch
 	patches.suse/af_packet-avoid-erroring-out-after-sock_init_data-in.patch
