r8169: remove leftover locks after reverted change (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -952,6 +952,7 @@
 	patches.suse/sfc-Remove-unused-mcdi-functions.patch
 	patches.suse/sfc-Remove-more-unused-functions.patch
 	patches.suse/r8169-improve-initialization-of-RSS-registers-on-RTL.patch
+	patches.suse/r8169-remove-leftover-locks-after-reverted-change.patch
 	patches.suse/ipv6-release-nexthop-on-device-removal.patch
 	patches.suse/selftests-net-really-check-for-bg-process-completion.patch
 	patches.suse/net-add-debug-check-in-skb_reset_transport_header.patch
