r8169: improve __rtl8169_set_wol (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -964,6 +964,7 @@
 	patches.suse/netfilter-nf_tables-must-hold-rcu-read-lock-while-it-cddc0427.patch
 	patches.suse/net-sfc-use-ethtool-string-helpers.patch
 	patches.suse/msft-hv-3081-hv_sock-Initializing-vsk-trans-to-NULL-to-prevent-a-.patch
+	patches.suse/r8169-improve-__rtl8169_set_wol.patch
 	patches.suse/neighbour-Add-hlist_node-to-struct-neighbour.patch
 	patches.suse/neighbour-Define-neigh_for_each_in_bucket.patch
 	patches.suse/neighbour-Convert-seq_file-functions-to-use-hlist.patch
