r8169: remove unused flag RTL_FLAG_TASK_RESET_NO_QUEUE_WAKE (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -4246,6 +4246,7 @@
 	patches.suse/ima-Suspend-PCR-extends-and-log-appends-when-rebooti.patch
 	patches.suse/selinux-Fix-SCTP-error-inconsistency-in-selinux_sock.patch
 	patches.suse/cachestat-fix-page-cache-statistics-permission-check.patch
+	patches.suse/r8169-remove-unused-flag-RTL_FLAG_TASK_RESET_NO_QUEU.patch
 	patches.suse/include-net-add-static-inline-dst_dev_overhead-to-ds.patch
 	patches.suse/net-ipv6-ioam6_iptunnel-mitigate-2-realloc-issue.patch
 	patches.suse/net-ipv6-seg6_iptunnel-mitigate-2-realloc-issue.patch
