r8169: fix inconsistent indenting in rtl8169_get_eth_mac_stats (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -896,6 +896,7 @@
 	patches.suse/net-marvell-use-ethtool-string-helpers.patch
 	patches.suse/net-qlogic-use-ethtool-string-helpers.patch
 	patches.suse/r8169-add-support-for-RTL8125D.patch
+	patches.suse/r8169-fix-inconsistent-indenting-in-rtl8169_get_eth_.patch
 	patches.suse/devlink-introduce-devlink_nl_put_u64.patch
 	patches.suse/wifi-p54-Use-IRQF_NO_AUTOEN-flag-in-request_irq.patch
 	patches.suse/wifi-mwifiex-Use-IRQF_NO_AUTOEN-flag-in-request_irq.patch
