--- a/series.conf
+++ b/series.conf
@@ -852,6 +852,7 @@
 	patches.suse/tg3-Increase-buffer-size-for-IRQ-label.patch
 	patches.suse/r8169-don-t-take-RTNL-lock-in-rtl_task.patch
 	patches.suse/r8169-replace-custom-flag-with-disable_work-et-al.patch
+	patches.suse/r8169-avoid-duplicated-messages-if-loading-firmware-.patch
 	patches.suse/net-phy-realtek-add-RTL8125D-internal-PHY.patch
 	patches.suse/eth-Fix-typo-accelaration-.-exprienced-and-rewrittin.patch
 	patches.suse/net-mlx5-Refactor-QoS-group-scheduling-element-creat.patch
