r8169: replace custom flag with disable_work() et al (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -851,6 +851,7 @@
 	patches.suse/net-phy-realtek-merge-the-drivers-for-internal-NBase.patch
 	patches.suse/tg3-Increase-buffer-size-for-IRQ-label.patch
 	patches.suse/r8169-don-t-take-RTNL-lock-in-rtl_task.patch
+	patches.suse/r8169-replace-custom-flag-with-disable_work-et-al.patch
 	patches.suse/net-phy-realtek-add-RTL8125D-internal-PHY.patch
 	patches.suse/eth-Fix-typo-accelaration-.-exprienced-and-rewrittin.patch
 	patches.suse/net-mlx5-Refactor-QoS-group-scheduling-element-creat.patch
