r8169: use helper r8169_mod_reg8_cond to simplify rtl_jumbo_config (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -985,6 +985,7 @@
 	patches.suse/bnxt_en-use-irq_update_affinity_hint.patch
 	patches.suse/net-atlantic-use-irq_update_affinity_hint.patch
 	patches.suse/selftests-ncdevmem-Move-ncdevmem-under-drivers-net-h.patch
+	patches.suse/r8169-use-helper-r8169_mod_reg8_cond-to-simplify-rtl.patch
 	patches.suse/bnxt_en-add-unlocked-version-of-bnxt_refclk_read.patch
 	patches.suse/net-Add-napi_struct-parameter-irq_suspend_timeout.patch
 	patches.suse/net-Add-control-functions-for-irq-suspension.patch
