--- a/series.conf
+++ b/series.conf
@@ -4316,6 +4316,7 @@
 	patches.suse/net-mlx5-Add-support-for-new-scheduling-elements.patch
 	patches.suse/net-mlx5-qos-Add-ifc-support-for-cross-esw-schedulin.patch
 	patches.suse/net-mlx5-Add-device-cap-abs_native_port_num.patch
+	patches.suse/r8169-adjust-version-numbering-for-RTL8126.patch
 	patches.suse/net-page_pool-rename-page_pool_is_last_ref.patch
 	patches.suse/net-mlx5e-Report-rx_discards_phy-via-rx_dropped.patch
 	patches.suse/ptr_ring-do-not-block-hard-interrupts-in-ptr_ring_re.patch
