r8169: switch away from deprecated pcim_iomap_table (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -7386,6 +7386,7 @@
 	patches.suse/ixgbe-add-PTP-support-for-E610-device.patch
 	patches.suse/ixgbe-add-support-for-thermal-sensor-event-reception.patch
 	patches.suse/ieee802154-ca8210-Use-proper-setters-and-getters-for.patch
+	patches.suse/r8169-switch-away-from-deprecated-pcim_iomap_table.patch
 	patches.suse/igb-reject-invalid-external-timestamp-requests-for-8.patch
 	patches.suse/broadcom-fix-supported-flag-check-in-periodic-output.patch
 	patches.suse/ptp-ocp-reject-unsupported-periodic-output-flags.patch
