--- a/series.conf
+++ b/series.conf
@@ -7393,6 +7393,7 @@
 	patches.suse/net-vlan-don-t-propagate-flags-on-open.patch
 	patches.suse/mptcp-sockopt-fix-getting-IPV6_V6ONLY.patch
 	patches.suse/mptcp-sockopt-fix-getting-freebind-transparent.patch
+	patches.suse/r8169-enable-RTL8168H-RTL8168EP-RTL8168FP-ASPM-suppo.patch
 	patches.suse/r8169-disable-RTL8126-ZRX-DC-timeout.patch
 	patches.suse/msft-hv-3230-net-mana-Add-metadata-support-for-xdp-mode.patch
 	patches.suse/wifi-ath11k-Fix-DMA-buffer-allocation-to-resolve-SWI.patch
